# MCWC

./: README.md  README_DEV.md  dev-requirements.txt  pyproject.toml  requirements.txt
configs/: gpt2.yaml  vit_b16.yaml
docs/: bitstream_spec.md
mcwc/: __init__.py
mcwc/align/: assignment.py  similarity.py
mcwc/codec/: bitstream.py  mcwc_codec.py  predictor.py  quantizer.py
mcwc/data/: lm_wikitext.py  vision_torchvision.py
mcwc/eval/: lm_eval.py  vision_eval.py
mcwc/models/: adapters.py
mcwc/utils/: compress.py
scripts/: decode_model.py  demo_compress.py  encode_model.py  evaluate_lm.py  evaluate_vision.py  setup_env.ps1  setup_env.sh  smoke_test_roundtrip.py  train_codec.py  windows_build_and_demo.ps1
tests/: test_imports.py
